# openapi.yaml
@@ -175,6 +175,11 @@ components:
         id:
           type: string
           format: uuid
+        source:
+          type: string
+        idempotencyKey:
+          type: string
+          nullable: true
         categoryId:
           type: string
           format: uuid
